--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,22 @@ charset-normalizer==3.3.2
 cloudinary==1.38.0
 cryptography==42.0.4
 defusedxml==0.7.1
+dj-database-url==0.5.0
 dj-rest-auth==5.0.2
 Django==5.0.2
 django-allauth==0.57.2
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.1
 django-filter==23.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
 idna==3.6
 oauthlib==3.2.2
+packaging==23.2
 pillow==10.2.0
+psycopg==3.1.18
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
@@ -23,4 +29,5 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.9.0
 urllib3==2.2.0
