--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,12 @@ django-filter==2.4.0
 django-tagulous==1.3.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
-greenlet==2.0.2
 gunicorn==21.2.0
 idna==3.4
 msgpack==1.0.5
 oauthlib==3.2.2
 packaging==23.1
-Pillow
+pillow==10.2.0
 psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
